<resources>
    <string name="app_name">Cash Manager</string>
    <string name="link_settings">Settings</string>
    <string name="link_home">Home</string>
    <string name="link_card">Payment</string>
    <string name="submit_button">Login</string>
    <string name="login_field">Username/Email</string>
    <string name="password_field">Password</string>
    <string name="server_ip">Serveur IP / FQDN</string>
    <string name="Server_button">Connection</string>
    <string name="total_payment">Total: </string>
    <string name="TempTotalBill">Empty</string>
    <string name="validate_bill">Submit</string>
    <string name="TotalPayment">Total :</string>
    <string name="TotalToPayValueString">Total Bill To Pay</string>
    <string name="payment_method">Payment method :</string>
    <string name="cheque_qrc">Cheque (QRC)</string>
    <string name="CB_NFC">Credit Card (NFC)</string>
    <string name="Cheque_OCR">Cheque (OCR)</string>
    <string name="credit_card_ocr">Credit Card (OCR)</string>
    <string name="validate_card">Submit</string>
    <string name="settings_drawer_value">Settings</string>
    <string name="status_payment_confirmed">Confirmed</string>
    <string name="Status_payment_refused">Refused</string>
    <string name="qrcode_error">Error in QR Code</string>
    <string name="scan_again">SCAN AGAIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_col">Price</string>
    <string name="item_col">Items</string>
    <string name="add_button_col">add</string>
    <string name="shopping">Shopping</string>
    <string name="nfc_scan">Scan</string>
</resources>