<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".payment.PaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paymentConstrainte"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TotalToPayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/TotalPayment"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/TotalToPayValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TotalToPayValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/TotalToPayText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/TotalToPayText"
            tools:text="@string/TotalToPayValueString" />

        <Button
            android:id="@+id/ChequeQRCButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/cheque_qrc"
            app:layout_constraintEnd_toStartOf="@+id/CreditCardNFCButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PaymentText" />

        <TextView
            android:id="@+id/PaymentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/payment_method"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TotalToPayText" />

        <Button
            android:id="@+id/CreditCardNFCButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CB_NFC"
            app:layout_constraintBaseline_toBaselineOf="@+id/ChequeQRCButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ChequeQRCButton" />

        <Button
            android:id="@+id/ChequeOCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Cheque_OCR"
            app:layout_constraintEnd_toStartOf="@+id/CraditCardORC"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ChequeQRCButton" />

        <Button
            android:id="@+id/CraditCardORC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_ocr"
            app:layout_constraintBaseline_toBaselineOf="@+id/ChequeOCR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ChequeOCR" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

