<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".cashregister.CashRegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cashRegisterConstrainte"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TableLayout
                android:id="@+id/items_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="7dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>


                <TableRow
                    android:id="@+id/TitleRow"
                    style="@style/row_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#51B435">

                    <TextView
                        android:id="@+id/ItemCol"
                        style="@style/items_style"
                        android:text="@string/item_col" />

                    <TextView
                        android:id="@+id/PriceCol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price_col" />

                    <TextView
                        android:id="@+id/AddCardCol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_button_col" />

                </TableRow>

            </TableLayout>
        </ScrollView>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/validate_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>