<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".setting.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingConstrainte"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/SubmitButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            app:layout_constraintBottom_toTopOf="@+id/ServerField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordField" />

        <EditText
            android:id="@+id/LoginField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_field"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/PasswordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/PasswordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/SubmitButtonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginField" />

        <EditText
            android:id="@+id/ServerField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/server_ip"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/SubmitServerConnection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SubmitButtonLogin" />

        <Button
            android:id="@+id/SubmitServerConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Server_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ServerField" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>